improve encoding detection

decoderForHtml does UTF-8 fallback, that did kill a lot of the probing
BUG: 487594